themes/custom/mat/sass/pages/_storiesapi.scss
// ========================================
//
// @file _storiesapi.scss
// Stories landing page, modal window styling
//
// ========================================
// Aditional variables
$option-width: 70px;

.slider-wrapper {
  width: 100%;
  height: calc(100vh - 220px);
  position: relative;
  margin: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  align-content: center;
  min-height: 800px;
  max-height: 90vh;

  .container-small {
    color: $color-white;
    text-align: center;

    > * {
      position: relative;
      z-index: 2;
    }

    h1 {
      margin-bottom: 4.2rem;
      padding-bottom: 0;

      @media (max-width: $screen-xs-max) {
        margin-bottom: 4.2rem;
      }

      @media (min-width: $screen-sm-min) {
        @include font-size(5);
        line-height: 1.1;
      }
    }

    .lead {
      max-width: 630px;
      margin: 0 auto 2.8rem auto;
      @extend %lead;
    }

    .btn-add-story {
      @include btn-primary();
      padding-left: 7.7rem !important;
      padding-right: 3.5rem;
      @include icons('i-comment-heart');
      background-size: 24px auto;
      background-position: 3.4rem center;

      @media (max-width: $screen-xs-max) {
        padding-right: 3rem;
      }
    }
  }
}

.adminimal-admin-toolbar {
  .slider-wrapper {
    height: calc(100vh - 260px);
  }
  &.toolbar-tray-open {
    .stories-api {
      height: calc(100vh - 300px);
      min-height: 700px;
    }
  }
}

.stories-api {
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  //z-index: 1;
  @include gradient(90deg, #0f84d2, #0f84d2, #0b145e);

  .outer-wrapper  {
    width: 100vw;
    height: calc(100% - 80px);
    overflow: scroll;
  }
}



@-webkit-keyframes Pulse {
  from {  -webkit-box-shadow: 0 0 10px rgba(255,255,255,0.5) }
  50% {  -webkit-box-shadow: 0 0 50px rgba(255,255,255,1) }
  to {  -webkit-box-shadow: 0 0 10px rgba(255,255,255,0.5) }
}

@-webkit-keyframes Pulse-star-1 {
  from { opacity: 0.3 }
  50% { opacity: 0.7 }
  to { opacity: 0.3 }
}
@-webkit-keyframes Pulse-star-2 {
  from { opacity: 0.3; transform: scale(0.3)}
  50% { opacity: 0.7; transform: scale(1) }
  to { opacity: 0.3; transform: scale(0.3) }
}
@-webkit-keyframes Pulse-bubble {
  from { opacity: 0.01; transform: scale(0.6)}
  50% { opacity: 0.03; transform: scale(1) }
  to { opacity: 0.01; transform: scale(0.6) }
}


@-webkit-keyframes Pulse-S {
  from { -webkit-box-shadow: 0 0 0 rgba(255,255,255,0.1) }
  50% {  -webkit-box-shadow: 0 0 10px rgba(255,255,255,0.15) }
  to {  -webkit-box-shadow: 0 0 0 rgba(255,255,255,0.1) }
}


.pulse-2 {
  -webkit-animation-name: Pulse;
  -webkit-animation-duration: 2s;
  -webkit-animation-iteration-count: infinite;
}

.pulse-star-1 {
  -webkit-animation-name: Pulse-star-1;
  -webkit-animation-duration: 3s;
  -webkit-animation-iteration-count: infinite;
}
.pulse-star-2 {
  -webkit-animation-name: Pulse-star-2;
  -webkit-animation-duration: 6s;
  -webkit-animation-iteration-count: infinite;
}

.pulse-ns {
  -webkit-animation-name: Pulse-ns;
  -webkit-animation-duration: 2s;
  -webkit-animation-iteration-count: infinite;
}

.pulse-s {
  -webkit-animation-name: Pulse-S;
  -webkit-animation-duration: 5s;
  -webkit-animation-iteration-count: infinite;
}

.pulse-bubble {
  -webkit-animation-name: Pulse-bubble;
  -webkit-animation-duration: 15s;
  -webkit-animation-iteration-count: infinite;
}

.slider-wrapper .container-small {
  
  * {
    opacity: 1;
    transition: opacity 1s linear;
  }
  &.fade-out * {
    opacity: 0;
  }
}
/* ... */

